# eurosat_classifier

./: .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  setup.cfg  spec.md  train.py
.github/workflows/: python-ci.yml  test.yml
config/: base_config.yaml
eurosat/: config.py  data_loader.py  evaluate.py  model.py  train_loop.py
tests/: conftest.py  test_config.py  test_data_loader.py  test_eurosat_dataset.py  test_evaluate.py  test_model.py  test_train.py  test_train_loop.py
