[metadata]
name = eurosat-classifier
version = 0.1.0
author = Your Name
description = EuroSAT land cover classification pipeline

[options]
packages = find:
install_requires =
    torch==2.3.0
    torchvision==0.18.0
    pyyaml==6.0.1
    scikit-learn==1.5.0
    matplotlib==3.8.4
    tqdm==4.66.4

[options.extras_require]
test =
    pytest==8.2.2
    black==24.4.2
